--- a/empty.html
+++ b/empty.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>bad
-    <p>good u
-    <p> hi 
-        <p>bye
+    <button onclick="createMulitpleH1()">Load messages</button>
+    <br />
 </body>
 </html>
