--- a/empty.html
+++ b/empty.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <button onclick="createMulitpleH1()">Load messages</button>
-    <br />
-    https://relaxed-wiles-d17578.netlify.app/
-    <br>
-    <P>
-        <P>;tvi75ei76vf4ol975o eci 64ck 8cro6e5</P>
-        u;<bp86b 97b[6[608]]="-766"></bp86b>
-    </P>
+   <p>
+       ,g icg;ig;oeryteoruyt;iuy'otgoe'ourtct ;qrtct;9yc9 3tb;2tcp37t b'qcr 38 rtr ehrtf ;uryt
+   </p>
 </body>
 </html>
