--- a/empty.html
+++ b/empty.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <button onclick="createMulitpleH1()">Load messages</button>
-   <p>
-       ,g icg;ig;oeryteoruyt;iuy'otgoe'ourtct ;qrtct;9yc9 3tb;2tcp37t b'qcr 38 rtr ehrtf ;uryt
-   </p>
-   <br>
-  <p>
-      8y '08'8 tvp 9tp b t7tto9yb
-  </p>
+    <img >
 </body>
 </html>
