--- a/empty.html
+++ b/empty.html
@@ -15,7 +15,7 @@
           its my life
           ok
           i had many cruses
-          
+          bu no frinds in my life 
       </p>
 </body>
 </html>
