--- a/empty.html
+++ b/empty.html
@@ -17,6 +17,7 @@
           i had many cruses
           but no frinds in my life 
           i love eating
+          i love myself
 
       </p>
 </body>
