--- a/empty.html
+++ b/empty.html
@@ -18,8 +18,8 @@
           but no frinds in my life 
           i love eating
           i love myself
-          first love is the est love
-
+          self love is best love
+          
       </p>
 </body>
 </html>
