--- a/empty.html
+++ b/empty.html
@@ -15,11 +15,11 @@
           its my life
           ok
           i had many cruses
-          but no frinds in my life 
           i love eating
           i love myself
           self love is best love
-          
+          i feel very sad always
+        
       </p>
 </body>
 </html>
