--- a/empty.html
+++ b/empty.html
@@ -19,7 +19,7 @@
           i love myself
           self love is best love
           i feel very sad always
-        
+        fun forever
       </p>
 </body>
 </html>
