--- a/empty.html
+++ b/empty.html
@@ -8,18 +8,8 @@
 </head>
 <body>
       <p>
-          hi ram kishore 
-          im ram 
-          kishore
-          i love codding
-          its my life
-          ok
-          i had many cruses
-          i love eating
-          i love myself
-          self love is best love
-          i feel very sad always
-        fun forever
+         this folder is used to create some important files
+         to take in simple and easy way
       </p>
 </body>
 </html>
