--- a/empty.html
+++ b/empty.html
@@ -9,7 +9,8 @@
 <body>
       <p>
          this folder is used to create some important files
-         to take in simple and easy way
+         to take in simple and easy way 
+         hi its my life 
       </p>
 </body>
 </html>
