--- a/empty.html
+++ b/empty.html
@@ -12,7 +12,8 @@
          to take in simple and easy way 
          hi its my life 
          oohoo
-         ohhhoooo
+         ohhhoooo.09 
+         X-UA-Compatible0
       </p>
 </body>
 </html>
