--- a/empty.html
+++ b/empty.html
@@ -12,8 +12,9 @@
          to take in simple and easy way 
          hi its my life 
          oohoo
-         ohhhoooo.09 
-         X-UA-Compatible0
+         ohhhoonooon 
+         comeonnnnn brooooo
+         its the time
       </p>
 </body>
 </html>
