--- a/empty.html
+++ b/empty.html
@@ -12,6 +12,7 @@
          to take in simple and easy way 
          hi its my life 
          its the time to do something
+         its waste of time
       </p>
 </body>
 </html>
