--- a/empty.html
+++ b/empty.html
@@ -12,7 +12,7 @@
          to take in simple and easy way 
          hi its my life 
          its the time to do something
-         its waste of time
+         its my next life
       </p>
 </body>
 </html>
