--- a/empty.html
+++ b/empty.html
@@ -13,7 +13,8 @@
          hi its my life 
          its the time to do something
          its my next life
-         yflv oiy;o86;
+         oyb8 6
+         <X-UA-Compatible08>9</X-UA-Compatible08>
       </p>
 </body>
 </html>
