--- a/empty.html
+++ b/empty.html
@@ -14,7 +14,8 @@
          its the time to do something
          its my next life
          oyb8 6
-         <X-UA-Compatible08>9</X-UA-Compatible08>
+        ikvtt iug
+        we-0fi\=0e2r
       </p>
 </body>
 </html>
