--- a/empty.html
+++ b/empty.html
@@ -13,8 +13,7 @@
          hi its my life 
          its the time to do something
          its my next life
-         6g08[g097
-         -h7]
+         lets begin
       </p>
 </body>
 </html>
