--- a/empty.html
+++ b/empty.html
@@ -13,7 +13,7 @@
          hi its my life 
          its the time to do something
          its my next life
-         lets begin
+         lets begin the life
       </p>
 </body>
 </html>
