--- a/empty.html
+++ b/empty.html
@@ -15,6 +15,7 @@
          its my next life
          lets begin the life
          begin 
+         with new rules
          no more worries
       </p>
 </body>
