--- a/empty.html
+++ b/empty.html
@@ -16,7 +16,7 @@
          lets begin the life
          no more worries
          enjoy
-         lets begin
+         lets begin the life
       </p>
 </body>
 </html>
