--- a/empty.html
+++ b/empty.html
@@ -17,6 +17,8 @@
          no more worries
          enjoy
          lets begin the life
+         ;98b6vp087v' 097'g67v;v6cv987d6c;07;f0vie
+         v?puvytyu8[foyvy]
       </p>
 </body>
 </html>
