--- a/empty.html
+++ b/empty.html
@@ -16,9 +16,7 @@
          lets begin the life
          no more worries
          enjoy
-         lets begin the life
-         ;98b6vp087v' 097'g67v;v6cv987d6c;07;f0vie
-         v?puvytyu8[foyvy]
+         lets begin the life]
       </p>
 </body>
 </html>
