--- a/empty.html
+++ b/empty.html
@@ -16,7 +16,8 @@
          lets begin the life
          no more worries
          enjoy
-         lets begin the life]
+         lets begin the life
+         waste
       </p>
 </body>
 </html>
