--- a/empty.html
+++ b/empty.html
@@ -19,7 +19,7 @@
          lets begin the life
          waste
          of time 
-         o68f/87{)*}
+         okitvt.ef
       </p>
 </body>
 </html>
