--- a/empty.html
+++ b/empty.html
@@ -19,7 +19,7 @@
          lets begin the life
          waste
          of time 
-         iphg' pyu'p
+         u6eut;o7v/p97/oy
       </p>
 </body>
 </html>
